src/assets/styles/views/LoginPage.scss
.login-page {
    background-color: $bgc-main;
    display: grid;
    grid-template-columns: auto 40%;
    height: 100vh;
    width: 100vw;
    position: relative;
    overflow: auto;

    & .rect {
        display: flex;
        height: em(40px);
        width: em(400px);
        align-items: center;
        justify-content: center;
        border-radius: em(4px);
        border: 1px solid $clr-border;
    }



    .login-signup-container {
        display: flex;
        flex-direction: column;
        height: 100%;
        align-items: center;
    }

    .login-signup {
        display: flex;
        flex: 1;
        flex-direction: column;
        align-items: center;

        & article {
            margin-bottom: em(48px);
            text-align: center;

            & h1 {
                font-family: poppins;
                letter-spacing: 0.5px;
                margin-bottom: em(8px);


                & p {
                    font-size: 1em;
                    font-family: poppins-medium;

                }
            }
        }

        & .separator-box {
            display: grid;
            gap: em(8px);
            grid-template-columns: 1fr auto 1fr;
            margin-bottom: em(16px);
            margin-top: em(16px);
            width: em(400px);

            font-family: figtree;

            & .separator-line {
                align-self: flex-end;
                border-top: 1px solid $clr-border;
                height: 50%;
            }
        }



        & .google-login {
            font-family: figtree;

            & img {
                height: 16px;
                margin-right: em(8px);
                width: 16px;
            }
        }

        & .work-email {
            & span {
                // margin-bottom: 8px;
            }

            & .work-email-input {
                margin-top: em(8px);
                margin-bottom: em(16px);
                font-family: poppins;
                color: $clr-main;
                font-size: em(14px);
                padding: 8px 16px;
                height: 40px;
                width: 400px;
                border: 1px solid #0073ea;
                transition: border-color .1s ease-in;

                &:hover {
                    border-color: black;
                }

                &:focus-visible {
                    border: 1px solid #0073ea;
                    outline: none;

                    &:hover {
                        border-color: black;

                    }
                }
            }

        }

        & button {
            background-color: #0073ea;
            color: $bgc-main;
            height: 40px;
            width: 400px;
            font-size: 1em;
            transition: .1s ease-in-out;

            &:hover {
                background-color: #0060b9;
            }

            &:active {
                scale: .95;
            }

            &.white{
                background-color: $bgc-main;
                color: $clr-main;
                &:hover{
                    background-color: rgba(103, 104, 121, 0.1);
                }
            }
        }

    }

    .img-container {
        display: flex;
        justify-content: center;
        overflow: hidden;
        background-color: rgb(97, 97, 255);

        & img {
            height: 100%;
            width: unset;

        }
    }

    .terms {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        margin-top: 16px;
        gap: 4px;
        margin-bottom: 1em;


        .terms-links-wrapper {
            display: flex;
            gap: 4px;
        }

        a {
            color: #1f76c2;
            text-decoration: none;
            
            &:hover {
                text-decoration: underline solid #1f76c2;
            }

            &:active{
                // text-decoration: ;
            }
        }
    }

    & footer {
        display: flex;
        gap: em(8px);
        margin-bottom: em(64px);
        align-items: center;
        justify-content: center;
        color: $clr-main;

        a{
            text-decoration: none;
            &:hover {
                text-decoration: underline solid #1f76c2;
            }
            &:active{
                color: #1f76c2;
            }
        }
    }
}

.input-login{
    outline: 1px solid #d0d4e4;
    border-radius: 4px;
    margin-inline: 3px 12px;
    padding: 10px 16px;
    margin-inline: unset;
    width: 100%;
    transition: outline-color .2s;
    border: 1px solid #0073ea;
}

.signup-option{
    color: #1f76c2;
}

.signup-option:hover{
    cursor: pointer;
}

